--- a/static/css/main.css
+++ b/static/css/main.css
@@ -71,3 +71,12 @@ img {
     max-width: 100%;
     max-height: 100%;
 }
+
+div.toolbar {
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 1em;
+    border-bottom: 1px solid #eee;
+    background: #fff;
+    letter-spacing: 0.05em;
+}
